imported data.csv

--- a/Churn_Prediction.ipynb
+++ b/Churn_Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b3dabf7a-ad36-44a4-bbb0-6725b9f9db62",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,16 @@
     "import pandas as pd\n",
     "import matplotlib as plt\n",
     "import seaborn as sb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57d69afe-fe32-4da0-8f70-a7638d6579d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('data.')"
    ]
   }
  ],
